# adult_income

./: Makefile  README.md  pyproject.toml
adult_income/: __init__.py  dataset.py  features.py  plots.py
adult_income/modeling/: predict.py  train.py
notebooks/: 0.01_data_exploratoy.ipynb
