[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adult_income"
version = "0.0.1"
description = "Predict whether annual income of an individual exceeds $50K/yr based on census data. Also known as \"Census Income\" dataset."
authors = [
  { name = "Hector Ardila" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["adult_income"]
force_sort_within_sections = true
